Поле «Время выполнения»

--- a/labs/lab01/index.html
+++ b/labs/lab01/index.html
@@ -48,8 +48,8 @@
 
     <div class="content">
     <p class="section">Лабораторная работа №1</p>
-        <p class="lr-theme">Темы: <a target="_blank" href="../../examples/quick-start/hello-world/index.html">Hello, world!</a>, <a target="_blank" href="../../examples/quick-start/introducing-jsx/index.html">Введение в JSX</a>, <a target="_blank" href="../../examples/quick-start/rendering-elements/index.html">Создание элементов</a></p>
-        
+        <p class="lr-info">Темы: <a target="_blank" href="../../examples/quick-start/hello-world/index.html">Hello, world!</a>, <a target="_blank" href="../../examples/quick-start/introducing-jsx/index.html">Введение в JSX</a>, <a target="_blank" href="../../examples/quick-start/rendering-elements/index.html">Создание элементов</a><br>
+        Время выполнения: 2 часа</p>
         <p>В первых лабораторных работах для разработки можно использовать любой текстовый редактор. В дальнейшем вам будет необходимо перейти на <a href="../../info/create_react_app/index.html" target="_blank">шаблон create-react-app</a>. Рассмотрите возможность сделать это сейчас для получения лучшего опыта.</p>
 
         <p class="section">Задание 1</p>
