--- a/labs/lab03/index.html
+++ b/labs/lab03/index.html
@@ -56,7 +56,8 @@
 
     <div class="content">
     <p class="section">Лабораторная работа №3</p>
-    <p class="lr-theme">Темы: <a target="_blank" href="../../examples/quick-start/lists-and-keys/index.html">Списки и ключи</a>, <a target="_blank" href="../../examples/quick-start/handling-events/index.html">Обработка событий</a></p>
+    <p class="lr-info">Темы: <a target="_blank" href="../../examples/quick-start/lists-and-keys/index.html">Списки и ключи</a>, <a target="_blank" href="../../examples/quick-start/handling-events/index.html">Обработка событий</a><br>
+    Время выполнения: 2 часа</p>
     <p class="section">Задание 1</p>
     <p>Создайте компонент <mark>PhoneInput</mark>. Компонент должен позволять ввести номер телефона в международном формате и при помощи радиокнопок выбрать одного из мобильных операторов страны, чей номер введён. Страна может быть определена как автоматически — по введённому пользователем коду, — так и пользователем вручную при помощи списка. Реализуйте автоматическое форматирование номера телефона, то есть расстановку в нём пробелов, скобок и дефисов.
     </p>
