--- a/labs/lab04/index.html
+++ b/labs/lab04/index.html
@@ -50,7 +50,8 @@
 
     <div class="content">
     <p class="section">Лабораторная работа №4</p>
-    <p class="lr-theme">Темы: <a target="_blank" href="../../examples/quick-start/composition-vs-inheritance/index.html">Композиция вместо наследования</a>, <a href="../../examples/quick-start/thinking-in-react/index.html" target="_blank">Мышление в React</a>, <a href="../../examples/quick-start/lifting-state-up/index.html" target="_blank">Передача состояния наверх</a></p>
+    <p class="lr-info">Темы: <a target="_blank" href="../../examples/quick-start/composition-vs-inheritance/index.html">Композиция вместо наследования</a>, <a href="../../examples/quick-start/thinking-in-react/index.html" target="_blank">Мышление в React</a>, <a href="../../examples/quick-start/lifting-state-up/index.html" target="_blank">Передача состояния наверх</a><br>
+    Время выполнения: 2 часа</p>
     <p class="section">Задание 1</p>
     <p>Создайте компонент <mark>Calendar</mark>, включающий в себя компоненты <mark>CalendarHead</mark> и <mark>CalendarBody</mark>. Он должен отрисовывать календарь c функциональными кнопками перехода к следующему и предыдущему месяцам. Сегодняшний день и дни, попавшие в выборку, но не относящиеся к выбранному месяцу, выделите цветом. Результат может выглядеть так:</p>
     <img src="img/calendar.jpg" alt="Пример реализации календаря">
