--- a/labs/lab06/index.html
+++ b/labs/lab06/index.html
@@ -51,7 +51,8 @@
 
         <div class="content">
             <p class="section">Лабораторная работа №6</p>
-            <p class="lr-theme">Темы: <a target="_blank" href="../../examples/advanced/render-props/index.html">Props'ы рендера</a></p>
+            <p class="lr-info">Темы: <a target="_blank" href="../../examples/advanced/render-props/index.html">Props'ы рендера</a><br>
+            Время выполнения: 2 часа</p>
             <p class="section">Задание 1</p>
             <p>Создайте компонент <mark>StudentInfo</mark> для получения данных о студенте и последующего использования их в других компонентах.</p>
             <p>Компонент <mark>StudentInfo</mark> должен содержать следующие поля:</p>
