--- a/labs/lab07/index.html
+++ b/labs/lab07/index.html
@@ -51,7 +51,8 @@
 
         <div class="content">
             <p class="section">Лабораторная работа №7</p>
-            <p class="lr-theme">Темы: <a target="_blank" href="../../examples/advanced/higher-order-comp/index.html">Компоненты более высокого порядка</a></p>
+            <p class="lr-info">Темы: <a target="_blank" href="../../examples/advanced/higher-order-comp/index.html">Компоненты более высокого порядка</a><br>
+            Время выполнения: 2 часа</p>
             <p>Для выполнения этой лабораторной работы вам понадобятся компоненты <mark>Calendar</mark> и <mark>Notes</mark>, разработанные в лабораторных работах №3 и №6.</p>
             <p class="section">Задание 1</p>
             <p>На основании компонентов <mark>Calendar</mark> и <mark>Notes</mark> разработайте компонент <mark>Scheduler</mark> «Планировщик задач».</p>
