--- a/labs/lab08/index.html
+++ b/labs/lab08/index.html
@@ -50,7 +50,8 @@
 
     <div class="content">
     <p class="section">Лабораторная работа №8</p>
-    <p class="lr-theme">Темы: <a target="_blank" href="../../examples/advanced/jsx-in-depth/index.html">JSX подробнее</a>, <a target="_blank" href="../../examples/advanced/uncontrolled-components/index.html">Неконтролируемые компоненты</a></p>
+    <p class="lr-info">Темы: <a target="_blank" href="../../examples/advanced/jsx-in-depth/index.html">JSX подробнее</a>, <a target="_blank" href="../../examples/advanced/uncontrolled-components/index.html">Неконтролируемые компоненты</a><br>
+    Время выполнения: 2 часа</p>
     <p class="section">Задание 1</p>
     <p>Разработайте компонент комментариев <mark>Сomments</mark>. Для комментария должна должна быть возможность указать:</p>
     <ul>
