--- a/labs/lab09/index.html
+++ b/labs/lab09/index.html
@@ -51,7 +51,8 @@
 
         <div class="content">
             <p class="section">Лабораторная работа №9</p>
-            <p class="lr-theme">Темы: <a target="_blank" href="../../examples/advanced/optimizing-perfomance/index.html">Оптимизация производительности</a>, <a target="_blank" href="../../examples/advanced/reconciliation/index.html">Согласование</a>, <a target="_blank" href="../../examples/advanced/forwarding-refs/index.html">Пересылки</a></p>
+            <p class="lr-info">Темы: <a target="_blank" href="../../examples/advanced/optimizing-perfomance/index.html">Оптимизация производительности</a>, <a target="_blank" href="../../examples/advanced/reconciliation/index.html">Согласование</a>, <a target="_blank" href="../../examples/advanced/forwarding-refs/index.html">Пересылки</a><br>
+            Время выполнения: 2 часа</p>
             <p class="section">Задание 1</p>
             <p>Для выполнения этой лабораторной работы вам понадобятся компонент <mark>SortTable</mark>, разработанный в лабораторной работе №3.</p>
             <p>Продолжите разработку компонента <mark>SortTable</mark>. Компонент должен содержать следующие обязательные поля:</p>
