--- a/labs/lab10/index.html
+++ b/labs/lab10/index.html
@@ -50,7 +50,8 @@
 
     <div class="content">
     <p class="section">Лабораторная работа №10</p>
-    <p class="lr-theme">Темы: <a target="_blank" href="../../examples/advanced/typechecking-with-proptypes/index.html">Проверка типов с помощью PropTypes </a>, <a target="_blank" href="../../examples/advanced/integrating-with-lib/index.html">Интеграция со сторонними библиотеками</a></p>
+    <p class="lr-info">Темы: <a target="_blank" href="../../examples/advanced/typechecking-with-proptypes/index.html">Проверка типов с помощью PropTypes </a>, <a target="_blank" href="../../examples/advanced/integrating-with-lib/index.html">Интеграция со сторонними библиотеками</a><br>
+    Время выполнения: 2 часа</p>
     <p class="section">Задание 1</p>
     <p>Изучить и научиться использовать поддерживаемые в React.js валидаторы с различными типами данных.</p>
     <p>Продемонстрируйте использование следующих валидаторов:</p>
