--- a/labs/lab11/index.html
+++ b/labs/lab11/index.html
@@ -50,7 +50,8 @@
 
     <div class="content">
         <p class="section">Лабораторная работа №11</p>
-        <p class="lr-theme">Темы: <a target="_blank" href="../../examples/advanced/jsx-in-depth/index.html">Границы ошибок</a>, <a target="_blank" href="../../examples/advanced/uncontrolled-components/index.html">Неконтролируемые компоненты</a></p>
+        <p class="lr-info">Темы: <a target="_blank" href="../../examples/advanced/jsx-in-depth/index.html">Границы ошибок</a>, <a target="_blank" href="../../examples/advanced/uncontrolled-components/index.html">Неконтролируемые компоненты</a><br>
+        Время выполнения: 2 часа</p>
         <p class="section">Задание 1</p>
         <p>Разработайте компонент <mark>Hierarchy</mark> для просмотра иерархической информации. Примером иерархической информации, которую компонент должен быть способен вывести, является дерево файлов. Дерево файлов задаётся объектом вида:</p>
 
