--- a/labs/lab05/index.html
+++ b/labs/lab05/index.html
@@ -48,7 +48,8 @@
 
     <div class="content">
         <p class="section">Лабораторная работа №5</p>
-        <p class="lr-theme">Темы: <a target="_blank" href="../../examples/quick-start/forms/index.html">Формы</a></p>
+        <p class="lr-info">Темы: <a target="_blank" href="../../examples/quick-start/forms/index.html">Формы</a><br>
+        Время выполнения: 2 часа</p>
         <p>Для выполнения этой лабораторной работы вам понадобится компонент <mark>PhoneInput</mark>, разработаннй в лабораторной работе №3.</p>
         <p class="section">Задание 1</p>
         <p>Создайте компонент <mark>SignUpForm</mark>, позволяющий ввести данные для регистрации пользователя на сайте. В форме должна быть возможность указать:</p>
