--- a/labs/lab12/index.html
+++ b/labs/lab12/index.html
@@ -50,6 +50,24 @@
 
     <div class="content">
     <p class="section">Лабораторная работа №12</p>
+    <p class="lr-info">Темы: <br>
+    Время выполнения: 2 часа</p>
+    <p class="section">Задание 1</p>
+    <p>Реализуйте компонент <mark>ShoppingCart</mark> — «корзина» в интернет-магазине. Компонент должен:</p>
+    <ul>
+        <li>вывести список товаров, добавленных в корзину;</li>
+        <li>для каждого добавленного товара предоставить возможность:
+            <ul>
+                <li>не добавлять его в заказ при помощи чекбокса,</li>
+                <li>указать количество товаров,</li>
+                <li>удалить из корзины;</li>
+            </ul>
+        </li>
+        <li>подсчитать стоимость заказа с учётом скидок;</li>
+        <li>вывести текстовое поле для указания адреса доставки;</li>
+        <li>вывести компонент <mark>Calendar</mark>, позволяющий указать дни, когда клиенту будет удобно получить заказ.</li>
+    </ul>
+
 
     </div>
     <div class="site-nav">
