Задание 2 Лабораторная работа №10

--- a/labs/lab10/index.html
+++ b/labs/lab10/index.html
@@ -66,6 +66,18 @@
     </ul>
     <p>Использовать компонент <mark>SignUpForm</mark>, разработанный в лабораторной работе №5. Применить <span class="gatsby-code-text">PropTypes</span> для всех пунктов, для которых возможна проверка типов. Предварительно подобрать нужный тип валидатора.</p>
     <p>Например : фамилию, имя, отчество можно проверить с помощью React.PropTypes.string.</p>
+    <p class="section">Задание 2</p>
+    <p>Создайте компонент поиска <mark>Search</mark> по уже существующему каталогу товаров, разработанному в предыдущей лабораторной работе. Компонент <mark>Search</mark> должен обращаться к компоненту SortTable содержащему всю информацию и товарах.</p>
+    <p>Реализовать возможность поиска с точным и частичным совпадением по наименованию товара, в зависимости от выбранного параметра.</p>
+        <p>В результате поискового запроса <span class="gatsby-code-text">обязательно должна быть выведена следующая информация</span>:</p>
+    <ul>
+        <li>Наименование товара;</li>
+        <li>Количество;</li>
+        <li>Стоимость;</li>
+        <li>Стоимость со скидкой (при наличии скидки);</li>
+        <li>Описание товара.</li>
+    </ul>
+    <p>Другую информацию о товаре можете выводить на свое усмотрение. Стили для компонента <mark>Search</mark> подберите на свое усмотрение.</p></p>
     </div>
     <div class="site-nav">
     <div class="site-nav-scroll">
