--- a/labs/lab06/index.html
+++ b/labs/lab06/index.html
@@ -69,7 +69,7 @@
             <p>Создайте компонент <mark>StudentInfoHandler</mark> для обработки и вывода полученной в компоненте <mark>StudentInfo</mark> информации. В ходе обработки информации получите следующие дополнительные данные:</p>
             <ul>
                 <li>текущий возраст студента;</li>
-                <li>курс студента (выводить "Окончил университет" при значении большем четырех);</li>
+                <li>курс студента (выводить «Окончил университет» при значении большем четырех);</li>
                 <li>оператор услуг электронной почты;</li>
                 <p>пример: для info@mail.ru оператором является mail.ru</p>
                 <li>оператор услуг мобильной связи.</li>
