--- a/labs/lab09/index.html
+++ b/labs/lab09/index.html
@@ -53,8 +53,8 @@
             <p class="section">Лабораторная работа №9</p>
             <p class="lr-info">Темы: <a target="_blank" href="../../examples/advanced/optimizing-perfomance/index.html">Оптимизация производительности</a>, <a target="_blank" href="../../examples/advanced/reconciliation/index.html">Согласование</a>, <a target="_blank" href="../../examples/advanced/forwarding-refs/index.html">Пересылки</a><br>
             Время выполнения: 2 часа</p>
+            <p>Для выполнения этой лабораторной работы вам понадобится компонент <mark>SortTable</mark>, разработанный в лабораторной работе №3.</p>
             <p class="section">Задание 1</p>
-            <p>Для выполнения этой лабораторной работы вам понадобятся компонент <mark>SortTable</mark>, разработанный в лабораторной работе №3.</p>
             <p>Продолжите разработку компонента <mark>SortTable</mark>. Компонент должен содержать следующие обязательные поля:</p>
             <ul>
                 <li>Наименование (Название);</li>
@@ -65,9 +65,9 @@
                 <li>Новинка (значение Да/Нет);</li>
                 <li>Скидка (значение в процентах).</li>
             </ul>
-            <p>В пункте "Изображение" выводите миниатюру изображения, а не его полную версию. Реализовать возможность сортировки по наименованию, стоимости, количеству, скидке.</p>
-            <p>Разработайте компонент товара <mark>Сatalog</mark> для отображения элементов из списка <mark>SortTable</mark> в виде каталога интернет-магазина. Компонент должен выводить всю информацию о каждом товаре из компонента <mark>SortTable</mark>. Реализовать возможность сортировки по тем же критериям, что и в компоненте <mark>SortTable</mark> (наименованию, стоимости, количеству, скидке).</p>
-            <p>При наличии скидки на товар выводить стоимость со скидкой и его полную стоимость. Если товар является новинкой, выводить информацию об этом в компоненте. Так же товары-новинки не зависимо от типа сортировки должны быть отображены первыми.</p>
+            <p>В пункте «Изображение» выводите миниатюру изображения, а не его полную версию. Реализуйте возможность сортировки по наименованию, стоимости, количеству, скидке.</p>
+            <p>Разработайте компонент товара <mark>Сatalog</mark> для отображения элементов из списка <mark>SortTable</mark> в виде каталога интернет-магазина. Компонент должен выводить всю информацию о каждом товаре из компонента <mark>SortTable</mark>. Реализуйте возможность сортировки по тем же критериям, что и в компоненте <mark>SortTable</mark> (по наименованию, стоимости, количеству, скидке).</p>
+            <p>При наличии скидки на товар выведите стоимость со скидкой и его полную стоимость. Если товар является новинкой, выведите информацию об этом в компоненте. Товары-новинки, независимо от типа сортировки, должны быть отображены первыми.</p>
             <p>Пример реализации компонента <mark>Сatalog</mark>:</p>
             <img src="demo1.jpg" alt="Пример 1">
             <img src="demo2.jpg" alt="Пример 2">
