--- a/labs/lab12/index.html
+++ b/labs/lab12/index.html
@@ -55,7 +55,7 @@
     <p>Для выполнения этой лабораторной работы вам понадобится компонент <mark>Catalog</mark>, разработанный в лабораторной работе №9.</p>
 
     <p class="section">Задание 1</p>
-    <p>Модифицируйте компонент каталога товаров <mark>Catalog</mark>, добавив каждому товару кнопку для добавления его в корзину.</p>
+    <p>Модифицируйте компонент каталога товаров <mark>Catalog</mark>, добавив каждому товару кнопку для добавления его в корзину и информацию о массе.</p>
     <p>Реализуйте компонент <mark>OrderForm</mark> — многостраничный диалог оформления заказа в интернет-магазине. Структура компонента:</p>
     <ul>
         <li>Индикатор выполнения <mark>ProgressBar</mark>, показывающий, на какой странице клиент находится.</li>
@@ -77,7 +77,7 @@
                 <li>Радиокнопки для выбора способа доставки:
                     <ul>
                         <li>курьером (если стоимость заказа меньше 200 рублей, то стоимость 10 рублей, если больше, то бесплатно),</li>
-                        <li>почтой (5 рублей),</li>
+                        <li>почтой (5 рублей за каждый килограмм массы),</li>
                         <li>самовывоз (бесплатно).</li>
                     </ul>
                 </li>
