--- a/labs/lab10/index.html
+++ b/labs/lab10/index.html
@@ -52,8 +52,9 @@
     <p class="section">Лабораторная работа №10</p>
     <p class="lr-info">Темы: <a target="_blank" href="../../examples/advanced/typechecking-with-proptypes/index.html">Проверка типов с помощью PropTypes </a>, <a target="_blank" href="../../examples/advanced/integrating-with-lib/index.html">Интеграция со сторонними библиотеками</a><br>
     Время выполнения: 2 часа</p>
+    <p>Для выполнения этой лабораторной работы вам понадобятся компоненты <mark>SignUpForm</mark>, разработанный в лабораторной работе №5, и <mark>SortTable</mark>, модифицированный в лабораторной работе №9.</p>
     <p class="section">Задание 1</p>
-    <p>Изучить и научиться использовать поддерживаемые в React.js валидаторы с различными типами данных.</p>
+    <p>Изучите использование поддерживаемых в React.js валидаторов с различными типами данных.</p>
     <p>Продемонстрируйте использование следующих валидаторов:</p>
     <ul>
         <li>optionalArray: React.PropTypes.array</li>
@@ -62,22 +63,22 @@
         <li>optionalNumber: React.PropTypes.number</li>
         <li>optionalObject: React.PropTypes.object</li>
         <li>optionalString: React.PropTypes.string</li>
-        <li> optionalSymbol: React.PropTypes.symbol</li>
+        <li>optionalSymbol: React.PropTypes.symbol</li>
     </ul>
-    <p>Использовать компонент <mark>SignUpForm</mark>, разработанный в лабораторной работе №5. Применить <span class="gatsby-code-text">PropTypes</span> для всех пунктов, для которых возможна проверка типов. Предварительно подобрать нужный тип валидатора.</p>
-    <p>Например : фамилию, имя, отчество можно проверить с помощью React.PropTypes.string.</p>
+    <p>Примените <span class="gatsby-code-text">PropTypes</span> для всех пунктов в <mark>SignUpForm</mark>, для которых возможна проверка типов. Предварительно подберите нужный тип валидатора.</p>
+    <p>Например: фамилию, имя, отчество можно проверить с помощью React.PropTypes.string.</p>
     <p class="section">Задание 2</p>
-    <p>Создайте компонент поиска <mark>Search</mark> по уже существующему каталогу товаров, разработанному в предыдущей лабораторной работе. Компонент <mark>Search</mark> должен обращаться к компоненту SortTable содержащему всю информацию и товарах.</p>
-    <p>Реализовать возможность поиска с точным и частичным совпадением по наименованию товара, в зависимости от выбранного параметра.</p>
-        <p>В результате поискового запроса <span class="gatsby-code-text">обязательно должна быть выведена следующая информация</span>:</p>
+    <p>Создайте компонент поиска <mark>Search</mark> по уже существующему каталогу товаров, разработанному в предыдущей лабораторной работе. Компонент <mark>Search</mark> должен обращаться к компоненту <mark>SortTable</mark>, содержащему всю информацию о товарах.</p>
+    <p>Реализуйте возможность поиска с точным и частичным совпадением по наименованию товара, в зависимости от выбранного параметра.</p>
+    <p>В результате поискового запроса <span class="gatsby-code-text">обязательно должна быть выведена следующая информация</span>:</p>
     <ul>
-        <li>Наименование товара;</li>
-        <li>Количество;</li>
-        <li>Стоимость;</li>
-        <li>Стоимость со скидкой (при наличии скидки);</li>
-        <li>Описание товара.</li>
+        <li>наименование товара;</li>
+        <li>количество;</li>
+        <li>стоимость;</li>
+        <li>стоимость со скидкой (при наличии скидки);</li>
+        <li>описание товара.</li>
     </ul>
-    <p>Другую информацию о товаре можете выводить на свое усмотрение. Стили для компонента <mark>Search</mark> подберите на свое усмотрение.</p></p>
+    <p>Стили для компонента <mark>Search</mark> подберите на свое усмотрение.</p></p>
     </div>
     <div class="site-nav">
     <div class="site-nav-scroll">
