Статья о React Router

--- a/info.html
+++ b/info.html
@@ -47,6 +47,7 @@
             <li><a href="info/cmd_install/index.html">Установка Командной строки</a></li>
             <li><a href="info/node_js_install/index.html">Установка Node.js</a></li>
             <li><a href="info/create_react_app/index.html">Создание React приложения (NPX, NPM, YARN)</a></li>
+            <li><a href="info/react_router/index.html">Что такое React Router и для чего он нужен?</a></li>
             </ol>
         </div>
         
