--- a/labs/lab14/index.html
+++ b/labs/lab14/index.html
@@ -50,7 +50,35 @@
 
     <div class="content">
     <p class="section">Лабораторная работа №14</p>
-
+    <p class="lr-info">Темы: <a target="_blank" href="../../info/react_router/index.html">React Router</a><br>
+    Время выполнения: 2 часа</p>
+    <p>Перед выполнением данной лабораторной работы изучите информацию о дополнении React Router в разделе "Справочник" или перейдите по ссылке <a href="../../info/react_router/index.html" target="_blank">"Что такое React Router и для чего он нужен?"</a>.</p>
+    <p class="section-title-left">Задание 1</p>
+    <p>Разработайте компонент навигационного меню <mark>NavBar</mark> демонстрирующий изменение компонентов страницы в зависимости от выбранной страницы. Реализуйте отображение различных компонентов при выборе разных пунктов меню.</p>
+    <p class="section-title-left">Задание 2</p>
+    <p>С использованием компонента меню, разработанного в предыдущем задании, разработайте несколько страниц (не менее 3-х).<br>Страницы должны содержать указанную информацию.</p>
+    <p><b>Первая страница:</b></p>
+    <ul>
+        <li>Название страницы с её номером (Например: Моя страница №1);</li>
+        <li>Ваше ФИО;</li>
+        <li>Текущую дату в формате День.Месяц.Год;</li>
+        <li>Компонент <mark>SortTable</mark> разработанный в лабораторной работе №9.</li>
+    </ul>
+    <p><b>Вторая страница:</b></p>
+    <ul>
+        <li>Название страницы с её номером (Например: Моя страница №2);</li>
+        <li>ФИО вашего одногруппника, идущего в списке подгруппы перед Вами;</li>
+        <li>Дату дня, предшествующего текущему (Вывод по формуле День-1.Месяц-1.Год-1);</li>
+        <li>Компонент <mark>Сatalog</mark> разработанный в лабораторной работе №9. </li>
+    </ul>
+    <p><b>Третья страница:</b></p>
+    <ul>
+        <li>Название страницы с её номером (Например: Моя страница №3);</li>
+        <li>ФИО вашего одногруппника, идущего в списке подгруппы после Вас;</li>
+        <li>Дату дня, последующего текущему (Вывод по формуле День+1.Месяц+1.Год+1);</li>
+        <li>Компонент <mark>Search</mark> разработанный в лабораторной работе №10.</li>
+    </ul>
+    <p><mark class="gatsby-code-text">Страницы, описанные выше, обязательны!</mark> Компоненты, размещенные на данных страницах должны быть связаны между собой и передавать необходимую информацию.</p>
     </div>
     <div class="site-nav">
     <div class="site-nav-scroll">
