--- a/labs/lab13/index.html
+++ b/labs/lab13/index.html
@@ -49,7 +49,21 @@
     <div class="general">
 
     <div class="content">
-    <p class="section">Лабораторная работа №13</p>
+        <p class="section">Лабораторная работа №13</p>
+        <p class="lr-info">Темы: <a target="_blank" href="../../examples/advanced/portals/index.html">Порталы</a><br>
+            Время выполнения: 2 часа</p>
+        <p>Для выполнения этой лабораторной работы вам понадобится компонент <mark>Catalog</mark>, улучшенный в лабораторной работе №12.</p>
+        <p class="section">Задание 1</p>
+        <p>При добавлении товара в корзину выведите модальное окно с уведомлением о том, что товар был успешно добавлен в корзину. Модальное окно должно содеражать:</p>
+        <ul>
+            <li>название товара,</li>
+            <li>стоимость,</li>
+            <li>колчество товаров в корзине,</li>
+            <li>суммарная стоимость товаров в корзине,</li>
+            <li>кнопки «Перейти к оформлению заказа» и «Продолжить просмотр товаров».</li>
+        </ul>
+        <p>Используйте для этого порталы.</p>
+
 
     </div>
     <div class="site-nav">
