ЛР 15 + Удаление ЛР 16-1

--- a/labs/lab15/index.html
+++ b/labs/lab15/index.html
@@ -50,7 +50,27 @@
 
     <div class="content">
     <p class="section">Лабораторная работа №15</p>
-
+    <p class="lr-info">Время выполнения: 4 часа</p>
+    <p>В данной лабораторной работе вам нужно будет объединить разработанные ранее компоненты в Интернет-магазин.</p>
+    <p>Вам понадобятся следующие компоненты:</p>
+    <ul>
+        <li>Каталог</li>
+        <li>Компонент навигации</li>
+        <li>Поиск по товарам</li>
+        <li>Форма регистрации</li>
+        <li>Форма авторизации</li>
+        <li>Форма оформления заказа</li>
+    </ul>
+        <p><mark class="gatsby-code-text">На странице Каталога</mark> вам необходимо объединить компоненты:</p>
+    <ul>
+        <li>Каталог</li>
+        <li>Компонент навигации</li>
+        <li>Поиск по товарам</li>
+    </ul>
+        <p><mark class="gatsby-code-text">На странице Авторизации</mark> вам необходимо объединить форму регистрации и форму авторизации.</p>
+        <p><mark class="gatsby-code-text">На странице Оформления заказа</mark> вам необходимо объединить компонент оформления заказа и компонент навигации.</p>
+    <p>Все компоненты на всех страницах должны использовать единое хранилище Redux.</p>
+    <p>Компонент регистрации должен добавлять новую запись, а компонент авторизации должен проверять наличие такой пары логина и пароля (электронная почта + пароль). При отсутствии данных в хранилище или если пароль не верен выдавать ошибку.</p>
     </div>
     <div class="site-nav">
     <div class="site-nav-scroll">
@@ -73,8 +93,7 @@
             <li><a href="../lab13/index.html">Лабораторная работа №13</a></li>
             <li><a href="../lab14/index.html">Лабораторная работа №14</a></li>
             <li><a href="index.html">Лабораторная работа №15</a></li>
-            <li><a href="../lab16/index.html">Лабораторная работа №16</a></li>
-            <li><a href="../lab17/index.html">Лабораторная работа №17</a></li>
+
         </ul>
         <script type="text/babel" src="../../libraries/navigator.js"></script>
         <script>
