--- a/labs.html
+++ b/labs.html
@@ -42,26 +42,24 @@
         <p class="section">Лабораторные работы по React.js</p>
         <div class="lr-block">
             <ol class="lr-list">
-                <p class="section-title-left">Раздел 1. Установка и введение в React</p>
-                <li><a href="labs/lab01/index.html">Лабораторная  работа. Тема.</a></li>
-                <li><a href="labs/lab02/index.html">Лабораторная  работа. Тема.</a></li>
-                <li><a href="labs/lab03/index.html">Лабораторная  работа. Тема.</a></li>
-                <li><a href="labs/lab04/index.html">Лабораторная  работа. Тема.</a></li>
-                <li><a href="labs/lab05/index.html">Лабораторная  работа. Тема.</a></li>
+                <p class="section-title-left">Раздел 1. Введение в React</p>
+                <li><a href="labs/lab01/index.html">Лабораторная  работа №1</a></li>
+                <li><a href="labs/lab02/index.html">Лабораторная  работа №2</a></li>
+                <li><a href="labs/lab03/index.html">Лабораторная  работа №3</a></li>
+                <li><a href="labs/lab04/index.html">Лабораторная  работа №4</a></li>
+                <li><a href="labs/lab05/index.html">Лабораторная  работа №5</a></li>
                 <p class="section-title-left">Раздел 2. Основы React</p>
-                <li><a href="labs/lab06/index.html">Лабораторная  работа. Тема.</a></li>
-                <li><a href="labs/lab07/index.html">Лабораторная  работа. Тема.</a></li>
-                <li><a href="labs/lab08/index.html">Лабораторная  работа. Тема.</a></li>
-                <li><a href="labs/lab09/index.html">Лабораторная  работа. Тема.</a></li>
-                <li><a href="labs/lab10/index.html">Лабораторная  работа. Тема.</a></li>
+                <li><a href="labs/lab06/index.html">Лабораторная  работа №6</a></li>
+                <li><a href="labs/lab07/index.html">Лабораторная  работа №7</a></li>
+                <li><a href="labs/lab08/index.html">Лабораторная  работа №8</a></li>
+                <li><a href="labs/lab09/index.html">Лабораторная  работа №9</a></li>
+                <li><a href="labs/lab10/index.html">Лабораторная  работа №10</a></li>
                 <p class="section-title-left">Раздел 3. Redux.js</p>
-                <li><a href="labs/lab11/index.html">Лабораторная  работа. Тема.</a></li>
-                <li><a href="labs/lab12/index.html">Лабораторная  работа. Тема.</a></li>
-                <li><a href="labs/lab13/index.html">Лабораторная  работа. Тема.</a></li>
-                <li><a href="labs/lab14/index.html">Лабораторная  работа. Тема.</a></li>
-                <li><a href="labs/lab15/index.html">Лабораторная  работа. Тема.</a></li>
-                <li><a href="labs/lab16/index.html">Лабораторная  работа. Тема.</a></li>
-                <li><a href="labs/lab17/index.html">Лабораторная  работа. Тема.</a></li>
+                <li><a href="labs/lab11/index.html">Лабораторная  работа №11</a></li>
+                <li><a href="labs/lab12/index.html">Лабораторная  работа №12</a></li>
+                <li><a href="labs/lab13/index.html">Лабораторная  работа №13</a></li>
+                <li><a href="labs/lab14/index.html">Лабораторная  работа №14</a></li>
+                <li><a href="labs/lab15/index.html">Лабораторная  работа №15</a></li>
             </ol>
         </div>
         
